--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 /*
-	Theme Name: Education Pro Theme
-	Theme URI: http://my.studiopress.com/themes/genesis/
+	Theme Name: UAMS Pro Theme
+	Theme URI: http://uams.edu/
 	Description: A mobile responsive and HTML5 theme built for the Genesis Framework.
 	Author: StudioPress
 	Author URI: http://www.studiopress.com/
+	Modified by: UAMS - Brent Passmore
+	Modified URI: http://github.com/bpmore
 	
 	Version: 3.0.0
 	
-	Tags: black, blue, gold, green, orange, purple, red, white, one-column, two-columns, three-columns, left-sidebar, right-sidebar, responsive-layout, custom-menu, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, premise-landing-page
+	Tags: black, red, white, one-column, two-columns, three-columns, left-sidebar, right-sidebar, responsive-layout, custom-menu, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, premise-landing-page
 
 	Template: genesis
 	Template Version: 2.0.0
